Widened input area and stopped label wrapping.

--- a/styles.css
+++ b/styles.css
@@ -100,12 +100,14 @@ label {
     display: block;
     width: 50%;
     font-size: .9rem;
+    white-space: nowrap;
 }
 
 input {
     border: 1px solid rgb(195, 195, 195);
     border-radius: 5px;
     padding: .3rem;
+    width: 70%;
 }
 
 input:focus {
